Fix typo in paragraph text

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <body>
   <div class="wrap">
     <h1>Tabela Periódica Interativa</h1>
-    <p class="lead">Clique em qualquer elemento para ver a história resumida de sua descoberta.</code>.</p>
+    <p class="lead">Clique em qualquer elemento para ver a história resumida de sua descoberta</code>.</p>
 
     <div id="periodic" class="periodic"></div>
 
