Change background color in CSS variables

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Tabela Periódica Interativa — 118 elementos</title>
   <style>
     :root{
-      --bg:#f5f7fa;--card:#fff;--muted:#6b7280;--accent:#0ea5a4;
+      --bg:#0a1f44;--card:#fff;--muted:#6b7280;--accent:#0ea5a4;
       --grid-gap:6px; --cell-w:54px; --cell-h:60px;
     }
     *{box-sizing:border-box}
