Change text colors for body and headings in index.html

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       --grid-gap:6px; --cell-w:54px; --cell-h:60px;
     }
     *{box-sizing:border-box}
-    body{font-family:Inter, system-ui, Arial, sans-serif; background:var(--bg); margin:0; padding:20px; color:#0f172a}
-    h1{font-size:20px;margin:0 0 6px;text-align:center}
+    body{font-family:Inter, system-ui, Arial, sans-serif; background:var(--bg); margin:0; padding:20px; color:#e5e7eb}
+    h1{font-size:20px;margin:0 0 6px;text-align:center;color:#f8fafc}
     p.lead{margin:0 0 18px;text-align:center;color:var(--muted)}
     .wrap{max-width:1200px;margin:0 auto}
 
@@ -42,7 +42,7 @@
 
     /* legend and details */
     .details{margin-top:18px;background:var(--card);padding:14px;border-radius:8px;border:1px solid #e6e9ef}
-    .details h2{margin:0 0 6px}
+    .details h2{margin:0 0 6px;color:#f8fafc}
     .details p{margin:6px 0;color:#111827}
     .meta{font-size:13px;color:var(--muted)}
 
