--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       --grid-gap:6px; --cell-w:54px; --cell-h:60px;
     }
     *{box-sizing:border-box}
-    body{font-family:Inter, system-ui, Arial, sans-serif; background:var(--bg); margin:0; padding:20px; color:#e5e7eb}
+    body{font-family:Inter, system-ui, Arial, sans-serif; background:var(--bg); margin:0; padding:20px; color:#0f172a}
     h1{font-size:20px;margin:0 0 6px;text-align:center;color:#f8fafc}
     p.lead{margin:0 0 18px;text-align:center;color:var(--muted)}
     .wrap{max-width:1200px;margin:0 auto}
