Change heading color and update text color

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     /* legend and details */
     .details{margin-top:18px;background:var(--card);padding:14px;border-radius:8px;border:1px solid #e6e9ef}
-    .details h2{margin:0 0 6px;color:#f8fafc}
+    .details h2{margin:0 0 6px;color:#0f172a}
     .details p{margin:6px 0;color:#111827}
     .meta{font-size:13px;color:var(--muted)}
 
@@ -76,7 +76,7 @@
       <div class="meta">Clique em um bloco da tabela para ver a história da descoberta (resumos em português).</div>
     </div>
 
-    <div style="margin-top:16px; text-align:center; color:var(--muted); font-size:13px">Lantanídeos e Actinídeos estão separados abaixo na ordem convencional.</div>
+    <div style="margin-top:16px; text-align:center; color:#f8fafc; font-size:13px">Lantanídeos e Actinídeos estão separados abaixo na ordem convencional.</div>
 
     <div id="lanth" style="margin-top:12px"></div>
     <div id="act" style="margin-top:12px"></div>
