Fix color style for element names in HTML

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
   for(let z=57; z<=71; z++){
     const e = ELEMENTS.find(x=>x.z===z);
     const f = document.createElement('div'); f.className='f-cell';
-    f.innerHTML = `<div style="font-size:11px;color:#f8fafc">${e.z}</div><div style="font-weight:700">${e.s}</div><div style="font-size:11px;color:var(--muted)">${e.name}</div>`;
+    f.innerHTML = `<div style="font-size:11px;color:#f8fafc">${e.z}</div><div style="font-weight:700">${e.s}</div><div style="font-size:11px;color:#f8fafc">${e.name}</div>`;
     f.onclick = ()=>showDetails(e);
     lanthRow.appendChild(f);
   }
@@ -262,7 +262,7 @@
   for(let z=89; z<=103; z++){
     const e = ELEMENTS.find(x=>x.z===z);
     const f = document.createElement('div'); f.className='f-cell';
-    f.innerHTML = `<div style="font-size:11px;color:#f8fafc">${e.z}</div><div style="font-weight:700">${e.s}</div><div style="font-size:11px;color:var(--muted)">${e.name}</div>`;
+    f.innerHTML = `<div style="font-size:11px;color:#f8fafc">${e.z}</div><div style="font-weight:700">${e.s}</div><div style="font-size:11px;color:#f8fafc">${e.name}</div>`;
     f.onclick = ()=>showDetails(e);
     actRow.appendChild(f);
   }
