--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 <body>
   <div class="wrap">
     <h1>Tabela Periódica Interativa</h1>
-    <p class="lead">Clique em qualquer elemento para ver a história resumida de sua descoberta. Feito para GitHub Pages — basta colar este arquivo como <code>index.html</code>.</p>
+    <p class="lead">Clique em qualquer elemento para ver a história resumida de sua descoberta </code>.</p>
 
     <div id="periodic" class="periodic"></div>
 
